# xaiunits_public

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  custom_methods_and_custom_datasets.html  genindex.html  image_dataset_example.html  index.html  library_quickstart.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: gh-pages.yml
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/common_lib/: index.html
autoapi/datagenerator/: index.html
autoapi/fine_tune/: index.html
autoapi/methods/: index.html
autoapi/metrics/: index.html
autoapi/model/: index.html
autoapi/pipeline/: index.html
autoapi/trainer/: index.html
demo/examples/: deeplift_suppl_exp.py  image.py  image_vit.py  tabular.py  text.py  vison_transformer.py
demo/tutorials/: dataset_reading.ipynb
docs/: datasets.puml
docs/charts/: nn_diagrams.py
docs/source/: conf.py  custom_methods_and_custom_datasets.ipynb  image_dataset_example.ipynb  index.rst  library_quickstart.ipynb
tests/datagenerator/: test_backgrounds.py  test_boolean_data.py  test_conflicting_data.py  test_data_generation.py  test_foregrounds.py  test_image_generation.py  test_interacting_feature_data.py  test_model_data_compatibility.py  test_pertinent_negative_data.py  test_shattered_grad.py  test_uncertainty_aware_data.py
tests/methods_metrics/: test_methods.py  test_metrics.py
tests/model/: test_and.py  test_boolean.py  test_conflicting.py  test_continuous.py  test_dynamic.py  test_interacting_features.py  test_not.py  test_or.py  (+3 more)
(+106 files in other folders)
